--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h2>Editing Book</h2>
+
+<%= form_with model: @book do |f| %>
+  <label>Title</label>
+  <%= f.text_field :title %>
+
+  <label>Opinion</label>
+  <%= f.text_area :body %>
+
+  <%= link_to "Update Book", book_path(@book.id) %>
+
+  <%= link_to "Show", book_path(@book.id) %>
+  |
+  <%= link_to "Back", books_path %>
+<% end %>
