--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,18 @@
+<%= render 'users/info', user: current_user %>
+<%= render 'form', book: @book %>
+
 <h2>Books</h2>
 
 <% @books.each do |book| %>
+<div>
+  <%= link_to user_path(book.user.id) do %>
+    <%= image_tag book.user.get_profile_image(100,100) %>
+  <% end %>
 
   <p>Title</p>
-  <%= book.title %>
+  <%= link_to book.title, book_path(book.id) %>
 
   <p>Opinion</p>
   <%= book.body %>
-
+</div>
 <% end %>
