--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,7 @@
 <h2>Editing Book</h2>
 
 <%= form_with model: @book do |f| %>
+<%= render 'error', book: @book_new %>
   <label>Title</label>
   <%= f.text_field :title %>
 
