--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,6 @@
+<%= flash[:notice] %>
+
+
 <%= render 'users/info', user: @book.user %>
 <%= render 'form', book: Book.new %>
 
@@ -8,9 +11,10 @@
     <%= image_tag @book.user.get_profile_image(100,100) %>
   <% end %>
   <%= link_to @book.user.name, user_path(@book.user.id) %>
-  <p><%= @book.title %></p>
-  <p><%= @book.body %></p>
-  <% if %>
-  <%= link_to "Edit", edit_book_path(@book.id) %>
-  <%= link_to "Destroy", book_path(@book.id), method: :delete, data: { confirm: '本当に消しますか？' } %>
+  <%= link_to @book.title, book_path(@book.id) %>
+  <%= @book.body %>
+  <% if @book.user == current_user %>
+    <%= link_to "Edit", edit_book_path(@book.id) %>
+    <%= link_to "Destroy", book_path(@book.id), method: :delete, data: { confirm: '本当に消しますか？' } %>
+  <% end %>
 </div>
