--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,5 @@
+<p><%= render 'layouts/notifications' %></p>
+
 <h1>welcome to <strong>Bookers</strong>!!</h1>
 <p>In <strong>Bookers</strong>,</p>
 <p>you can share and exchange your opinions, impressions, and emotions</p>
