--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,7 @@
 <h2>User info</h2>
 
 <%= form_with model: @user do |f| %>
+<%= render 'error', user: @user %>
   <label>Name</label>
   <%= f.text_field :name %>
 
