--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,16 +1,19 @@
 <h2>Editing Book</h2>
-
+<%= render 'error', book: @book %>
 <%= form_with model: @book do |f| %>
-<%= render 'error', book: @book_new %>
-  <label>Title</label>
-  <%= f.text_field :title %>
-
-  <label>Opinion</label>
-  <%= f.text_area :body %>
-
-  <%= link_to "Update Book", book_path(@book.id) %>
+  <div>
+    <label>Title</label><br>
+    <%= f.text_field :title %>
+  </div>
+  <div>
+    <label>Opinion</label><br>
+    <%= f.text_area :body %>
+  </div>
+  <div>
+    <%= f.submit 'Update Book' %>
+  </div>
+<% end %>
 
   <%= link_to "Show", book_path(@book.id) %>
   |
   <%= link_to "Back", books_path %>
-<% end %>
