--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,14 +2,17 @@
 
 <%= form_with model: @user do |f| %>
 <%= render 'error', user: @user %>
-  <label>Name</label>
-  <%= f.text_field :name %>
-
-  <label>Image</label>
-  <%= f.file_field :profile_image, accept: "image/*" %>
-
-  <label>Introduction</label>
-  <%= f.text_area :introduction %>
-
-  <%= link_to "Update User", user_path(@user.id) %>
+  <div>
+    <label>Name</label><br>
+    <%= f.text_field :name %>
+  </div>
+  <div>
+    <label>Image</label><br>
+    <%= f.file_field :profile_image, accept: "image/*" %>
+  </div>
+  <div>
+    <label>Introduction</label><br>
+    <%= f.text_area :introduction %>
+  </div>
+    <%= f.submit 'Update User' %>
 <% end %>
