--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,12 +1,13 @@
-<h2>New book</h2>
-
 <%= form_with model: book do |f| %>
-
-  <label>Title</label>
-  <%= f.text_field :title %>
-
-  <label>Opinion</label>
-  <%= f.text_area :body %>
-
-  <%= f.submit 'Create Book' %>
+  <div class='form-group'>
+    <label>Title</label>
+    <%= f.text_field :title, class: 'form-control book_title' %>
+  </div>
+  <div class='form-group'>
+    <label>Opinion</label>
+    <%= f.text_area :body, class: 'form-control book_body' %>
+  </div>
+  <div class='form-group'>
+    <%= f.submit 'Create Book', class: 'btn btn-success' %>
+  </div>
 <% end %>
