--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,19 +1,31 @@
-<h2>Editing Book</h2>
-<%= render 'error', book: @book %>
-<%= form_with model: @book do |f| %>
-  <div>
-    <label>Title</label><br>
-    <%= f.text_field :title %>
-  </div>
-  <div>
-    <label>Opinion</label><br>
-    <%= f.text_area :body %>
-  </div>
-  <div>
-    <%= f.submit 'Update Book' %>
-  </div>
-<% end %>
+<main>
+  <p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+        <h1>Editing Book</h1>
+        <%= render 'error', book: @book %>
+        <%= form_with model: @book do |f| %>
+          <div class="form-group">
+            <label>Title</label><br>
+            <%= f.text_field :title, class: "form-control book_title" %>
+          </div>
+          <div class="form-group">
+            <label>Opinion</label><br>
+            <%= f.text_area :body, class: "form-control book_body" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'Update Book', class: "btn btn-success" %>
+          </div>
+        <% end %>
 
-  <%= link_to "Show", book_path(@book.id) %>
-  |
-  <%= link_to "Back", books_path %>
+          <%= link_to "Show", book_path(@book.id) %>
+          |
+          <%= link_to "Back", books_path %>
+      </div>
+    </div>
+  </div>
+</main>
+
+
+
