--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,19 +1,36 @@
 <%= flash[:notice] %>
 
-<%= render 'users/info', user: @book.user %>
-<%= render 'form', book: Book.new %>
-
-<h2>Book detail</h2>
-
-<div>
-  <%= link_to user_path(@book.user.id) do %>
-    <%= image_tag @book.user.get_profile_image(100,100) %>
-  <% end %>
-  <%= link_to @book.user.name, user_path(@book.user.id) %>
-  <%= link_to @book.title, book_path(@book.id) %>
-  <%= @book.body %>
-  <% if @book.user == current_user %>
-    <%= link_to "Edit", edit_book_path(@book.id) %>
-    <%= link_to "Destroy", book_path(@book.id), method: :delete, data: { confirm: '本当に消しますか？' } %>
-  <% end %>
-</div>
+<main>
+  <p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <h2>User info</h2>
+        <%= render 'users/info', user: @book.user %>
+        <h2 class="mt-3">New book</h2>
+        <%= render 'form', book: Book.new %>
+      </div>
+      <div class="col-md-8 offset-md-1">
+        <h2>Book detail</h2>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>
+                <%= link_to user_path(@book.user.id) do %>
+                  <%= image_tag @book.user.get_profile_image(100,100) %><br>
+                  <%= @book.user.name %>
+                <% end %>
+              </td>
+              <td><%= link_to @book.title, book_path(@book.id) %></td>
+              <td><%= @book.body %></td>
+                <% if @book.user == current_user %>
+                  <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success" %></td>
+                  <td><%= link_to "Destroy", book_path(@book.id), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger" %></td>
+                <% end %>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</main>
