--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,11 +1,17 @@
-<h2>User info</h2>
+<table class="table">
+  <tr><%= image_tag user.get_profile_image(100,100) %></tr>
+  <tr>
+    <th>name</th>
+    <th><%= user.name %></th>
+  </tr>
+  <tr>
+    <th>introduction</th>
+    <th><%= user.introduction %></th>
+  </tr>
+</table>
+<div class="row">
+  <%= link_to edit_user_path(user.id), class: 'btn btn-outline-secondary btn-block' do %>
+      <i class="fas fa-user-cog"></i>
+    <% end %>
+</div>
 
-  <%= image_tag user.get_profile_image(100,100) %>
-
-  <p>name</p>
-  <%= user.name %>
-
-  <p>introduction</p>
-  <%= user.introduction %>
-
-  <%= link_to "プロフィール編集", edit_user_path(user.id) %>
